# holospy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGES.rst  CONTRIBUTING.rst  README.md  changes.html  citing.html  contributing.html  genindex.html  index.html  intro.html  license.html  objects.inv  py-modindex.html  pyproject.toml  releasing_guide.md  search.html  searchindex.js  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: black.yml  build.yml  doc.yml  release.yml  tests.yml
_sources/: intro.rst.txt
_sources/api/: index.rst.txt  reconstruct.rst.txt  signals.rst.txt  tools.rst.txt
_sources/user_guide/: electron_holography.rst.txt
api/: data.html  index.html  reconstruct.html  signals.html  tools.html
doc/: changes.rst  citing.rst  conf.py  index.rst  intro.rst  license.rst
doc/api/: data.rst  datasets.rst  index.rst  signals.rst  tools.rst
doc/user_guide/: bibliography.rst  electron_holography.rst  index.rst  installation.rst  metadata_structure.rst
holospy/: __init__.py  conftest.py  reconstruct.py  release_info.py  tools.py
holospy/data/: __init__.py
holospy/datasets/: __init__.py
holospy/misc/: reconstruct.py
holospy/signals/: __init__.py  hologram_image.py
holospy/tests/: test_non-uniform_not-implemented.py
holospy/tests/signals/: test_hologram_image.py  test_hologram_image_statistics.py
upcoming_changes/: 16.bugfix.rst  26.deprecation.rst  26.doc.rst  28.maintenance.rst  29.maintenance.rst  30.maintenance.rst  34.doc.rst  35.maintenance.rst  37.maintenance.rst  README.rst
user_guide/: bibliography.html  electron_holography.html  index.html  installation.html  metadata_structure.html
