[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holospy"
description = "Analysis of (off-axis) holography data with HyperSpy."
requires-python = ">=3.8"
readme = "README.md"
keywords=[
    "data analysis",
    "microscopy",
    "electron microscopy",
    "Off-axis holography",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]
dependencies = [
  "hyperspy>=2.0rc0",
  "numpy>=1.20.0",
  "scipy>=1.5.0",
]
dynamic = ["version"]

[project.entry-points."hyperspy.extensions"]
holospy = "holospy"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov",
  "setuptools-scm",
]
doc = [
  "numpydoc",
  "pydata-sphinx-theme>=0.13",
  "sphinx",
  "sphinx-favicon",
]
dev = [
  "black",
  "holospy[doc]",
  "holospy[tests]"
]

[project.urls]
"Homepage" = "https://hyperspy.org/holospy"
"Bug Reports" = "https://github.com/hyperspy/holospy/issues"
"Source" = "https://github.com/hyperspy/holospy"

[tool.coverage.run]
branch = true
source = ["holospy"]
omit = [
  "holospy/tests/*",
]

[tool.coverage.report]
precision = 2

[tool.pytest.ini_options]
#  "-ra",  # Display summary: "all except passes"
addopts = "-ra"
minversion = "6.0"
testpaths = [
  "holospy/tests",
]

[tool.setuptools.packages.find]
include = ["holospy*"]

[tool.setuptools.package-data]
"*" = [
  "*hdf5",
  "*.yaml"
  ]

[tool.setuptools_scm]
# Presence enables setuptools_scm, the version will be determine at build time from git
